--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     
     <body>
+        <div id="whole">
         <div class="container">
             <div class="row">
                 <div class="col-6">
@@ -91,7 +92,7 @@ which predicts the type of plant disease and remedies for the disease</b>
 </div>
     </div></div>
     
-
+</div>
 
 
  </body>
